--- a/zhongrui/web/index.html
+++ b/zhongrui/web/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 
     <meta http-equiv="X-UA-Compatible" content ="IE=edge"/>
-    <title>众瑞金融</title>
+    <title>众鑫</title>
     <style type="text/css">
           #Loading {
             top:50%;
